<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_temp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/cacheInterButton"
        android:textSize="50sp"
        android:textColor="#fff"
        android:text="@string/cb_title"
        />



    <Button
        android:id="@+id/cacheInterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cb_cache_inter"
        />

    <Button
        android:id="@+id/cacheRewaredButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cacheInterButton"
        android:layout_centerHorizontal="true"
        android:text="@string/cb_cache_reward"
        />

    <Button
        android:id="@+id/showInterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/cb_show_inter"
        />

    <Button
        android:id="@+id/showRewardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/cb_show_rewarded"
        />




</RelativeLayout>